// ERD DATABASE SISTEM PIGTOWNBARBERHOP
// Paste di: https://dbdiagram.io/
// Klik "Export" -> PNG/PDF untuk proposal

Project pigtownbarberhop {
  database_type: 'PostgreSQL'
  Note: '''
    # PIGTOWNBARBERHOP Management System
    Database Design & ERD
    
    **Tim Development:**
    - Ari Setia Hinanda
    - Bayu Nurcahyo
    - M. Ari Affandi
    - M. Risky Ardiansyah
  '''
}

// ============================================
// MASTER DATA
// ============================================

Table branches {
  id uuid [pk]
  name varchar(255) [not null]
  address text
  phone varchar(20)
  status varchar(20)
  manager_id uuid
  operating_hours jsonb
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Master data cabang barbershop'
}

Table users {
  id uuid [pk]
  email varchar(255) [not null, unique]
  name varchar(255) [not null]
  phone varchar(20)
  position varchar(50)
  status varchar(20)
  branch_id uuid [ref: > branches.id]
  salary decimal(15,2)
  commission_rate decimal(5,2)
  max_absent_days integer
  pin varchar(6)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Karyawan: Owner, Admin, Kasir, Barber'
}

Table branch_shifts {
  id uuid [pk]
  branch_id uuid [ref: > branches.id, not null]
  shift_name varchar(100) [not null]
  shift_type varchar(50)
  start_time time
  end_time time
  is_active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Jadwal shift kerja per cabang'
}

Table service_categories {
  id uuid [pk]
  name varchar(255) [not null]
  description text
  is_active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Kategori: Haircut, Shaving, Treatment, Product'
}

Table services {
  id uuid [pk]
  category_id uuid [ref: > service_categories.id]
  name varchar(255) [not null]
  description text
  price decimal(15,2) [not null]
  duration integer
  type varchar(50)
  status varchar(20)
  stock integer
  commission_rate decimal(5,2)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Layanan & produk yang dijual'
}

// ============================================
// TRANSAKSI & OPERASIONAL
// ============================================

Table transactions {
  id uuid [pk]
  transaction_number varchar(50) [unique, not null]
  receipt_number varchar(50)
  cashier_id uuid [ref: > users.id]
  server_id uuid [ref: > users.id]
  branch_id uuid [ref: > branches.id]
  cashier_name varchar(255)
  server_name varchar(255)
  branch_name varchar(255)
  customer_name varchar(255)
  subtotal decimal(15,2)
  discount_amount decimal(15,2)
  total_amount decimal(15,2) [not null]
  payment_method varchar(50)
  payment_status varchar(20)
  notes text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Transaksi POS - header'
}

Table transaction_items {
  id uuid [pk]
  transaction_id uuid [ref: > transactions.id, not null]
  service_id uuid [ref: > services.id]
  barber_id uuid [ref: > users.id]
  service_name varchar(255)
  service_type varchar(50)
  service_category varchar(100)
  quantity integer [not null]
  unit_price decimal(15,2) [not null]
  total_price decimal(15,2) [not null]
  commission_amount decimal(15,2)
  commission_status varchar(20)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Detail item per transaksi'
}

Table attendance {
  id uuid [pk]
  user_id uuid [ref: > users.id, not null]
  branch_id uuid [ref: > branches.id]
  date date [not null]
  shift_type varchar(50)
  check_in_time time
  check_out_time time
  break_start_time time
  break_end_time time
  total_hours decimal(5,2)
  break_duration decimal(5,2)
  status varchar(20)
  check_in_photo text
  check_out_photo text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    (user_id, date) [unique]
  }
  
  Note: 'Presensi karyawan dengan foto'
}

Table kasbon {
  id uuid [pk]
  user_id uuid [ref: > users.id, not null]
  amount decimal(15,2) [not null]
  reason text
  status varchar(20) [default: 'pending']
  request_date date [not null]
  due_date date
  notes text
  approved_by uuid [ref: > users.id]
  approved_at timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Pinjaman/kasbon karyawan'
}

Table expenses {
  id uuid [pk]
  branch_id uuid [ref: > branches.id]
  requested_by uuid [ref: > users.id]
  approved_by uuid [ref: > users.id]
  category varchar(100)
  description text
  amount decimal(15,2) [not null]
  status varchar(20) [default: 'pending']
  expense_date date [not null]
  due_date date
  receipt_url text
  notes text
  approved_at timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Pengeluaran operasional cabang'
}

// ============================================
// SISTEM REWARD & CONFIG
// ============================================

Table points {
  id uuid [pk]
  user_id uuid [ref: > users.id, not null]
  points_earned integer [not null]
  points_type varchar(50)
  description text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Poin reward karyawan'
}

Table commission_rules {
  id uuid [pk]
  user_id uuid [ref: > users.id]
  service_id uuid [ref: > services.id]
  commission_rate decimal(5,2) [not null]
  commission_type varchar(50)
  is_active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Aturan komisi per karyawan/layanan'
}

Table receipt_templates {
  id uuid [pk]
  branch_id uuid [ref: > branches.id]
  name varchar(255) [not null]
  template_name varchar(100)
  header_text text
  footer_text text
  logo_url text
  paper_width integer
  is_active boolean [default: true]
  is_default boolean [default: false]
  show_logo boolean [default: true]
  show_address boolean [default: true]
  show_phone boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Template struk per cabang'
}

// ============================================
// RELATIONSHIP SUMMARY
// ============================================
// Total Tables: 13
// Total Relationships: 25
// 
// Tabel Utama (Core):
// - branches (1) -> users (many)
// - users -> transactions, attendance, kasbon
// 
// Transaksi Flow:
// - transactions (1) -> transaction_items (many)
// - services -> transaction_items
// 
// Approval Flow:
// - kasbon.approved_by -> users
// - expenses.approved_by -> users
